# borealis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/borealis-api/: Cargo.toml
crates/borealis-api/src/: error.rs  main.rs
crates/borealis-api/src/routes/: bz.rs  kp.rs  latest.rs  mod.rs  wind.rs
crates/borealis-collector/: Cargo.toml
crates/borealis-collector/src/: main.rs
crates/borealis-db/: Cargo.toml
crates/borealis-db/migrations/: 20260218052953_create_kp_table.sql  20260218053359_create_bz_table.sql  20260218053540_create_wind_table.sql
crates/borealis-db/src/: db.rs  lib.rs  models.rs
docker/: Dockerfile  docker-compose.prod.yml
frontend/: dashboard.js  index.html  style.css
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/bootstrap/: main.tf
infra/modules/ec2/: main.tf  outputs.tf  user_data.sh.tpl  variables.tf
infra/modules/network/: main.tf  outputs.tf
infra/modules/security/: main.tf  outputs.tf
