[package]
name = "borealis-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
borealis-db = { path = "../borealis-db" }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
